# templ-pipeline

./: .coverage  .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS  CERIT_DEPLOYMENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COLLAPSIBLE_SIDEBAR_IMPLEMENTATION.md  COMPREHENSIVE_FAIR_ANALYSIS.md  CONTRIBUTING.md  DEPLOYMENT_EXECUTION_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DOCKER_DEPLOYMENT_FINAL.md  DOCKER_DEPLOYMENT_PLAN.md  DYNAMIC_PORT_IMPLEMENTATION.md  Dockerfile  Dockerfile.minimal  EMBEDDING_DEPLOYMENT_GUIDE.md  ENVIRONMENT_GUIDE.md  ENVIRONMENT_IMPROVEMENTS.md  INSTALL.md  LICENSE  MEMORY_OPTIMIZATIONS_SUMMARY.md  MODERNIZATION.md  OPTIMIZATION_COMPARISON.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_SUMMARY.md  POLARIS_PERFORMANCE_ANALYSIS.md  QUICK_DEPLOY.md  README.md  README_UPDATES_SUMMARY.md  README_UPDATE_PLAN.md  RNA_PROTEIN_CLASSIFIER.md  THREADING_FIX_SUMMARY.md  TIMESPLIT_MEMORY_ANALYSIS.md  TIMESPLIT_OPTIMIZATION_PLAN.md  (+66 more)
.bandit/: config.yml
.github/workflows/: README.md  cffconvert.yml  ci.yml  docker.yml  livetests.yml  sonarcloud.yml  tests.yml
.reuse/: dep5
.streamlit/: config.toml
LICENSES/: CC-BY-4.0.txt  MIT.txt
benchmark/: generator.py  memory_test.py  runner.py  streaming.py  timesplit.py  timesplit_stream.py
benchmark/polaris/: benchmark.py
benchmark_workspace_polaris_20250704_135749/summaries/: polaris_benchmark_summary_20250704_141939.json  polaris_benchmark_summary_20250704_141939.md
cli/: __init__.py  main.py
config/: datasets.yaml.template
core/: __init__.py  data_validator.py  database_validation.py  embedding.py  hardware_utils.py  mcs.py  molecule_standardization.py  pipeline.py  standardized_processing.py  templates.py  torch_fix.py  utils.py
data/: README.md
data-minimal/embeddings/: protein_embeddings_base.npz
data-minimal/example/: 1a1c.sdf  1iky.smi  1iky_ligand.sdf  5eqy.smi
data/dev_subset/: balanced_dev_subset.txt  dev_subset_pdbs_original.txt
data/embeddings/: protein_embeddings_base_backup.npz
data/example/: 1a1c.sdf  5eqy_ligand.sdf
data/ligands/: processed_ligands_new_unzipped.sdf
data/polaris/: test_poses_with_properties.sdf  test_poses_with_properties_old.sdf  train_mersmols.sdf  train_sarsmols.sdf  train_sarsmols_aligned_to_mers.sdf  train_sarsmols_aligned_to_mers_new.sdf  train_sarsmols_aligned_to_mers_old.sdf
deploy/: DATA_MANAGEMENT.md  README.md  SECURITY_SETUP.md
deploy/docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  init-data.Dockerfile
deploy/kubernetes/: code-pvc.yaml  configmap.optimized.yaml  configmap.yaml  deployment.optimized.yaml  deployment.persistent-simple.yaml  deployment.persistent.yaml  deployment.yaml  ingress-secure.yaml  ingress.optimized.yaml  ingress.yaml  kuba-cluster.yaml  pvc.yaml  secrets.template.yaml  service.optimized.yaml  service.yaml
deploy/scripts/: AUTH_USAGE.md  MULTI_CORE_OPTIMIZATION.md  README.md  benchmark-build.sh  build-init-container.sh  build.sh  copy-data.sh  deploy-complete.sh  deploy-persistent.sh  deploy.sh  dev-setup.sh  init-data-setup.sh  quick-update-persistent.sh  quick-update.sh  setup_docker_env.sh
diagrams/: diagram.html  enhanced_diagram.html  enhanced_diagram_generator.py  generate_diagram.html  generate_diagram_image.py  mcs_diagram.html  mcs_simplified_diagram.html  simplified_diagram.html  templates_diagram.html  unified_protein_superimposition_diagram.html  updated_mcs_diagram.html  updated_templates_diagram.html
docs/: QA_PROCESS.md  TESTING_GUIDE.md  TEST_STANDARDS.md
examples/: advanced_usage.py  basic_usage.py  cli_demo.py  cli_workflows.sh  time_split_example.py
memory-bank/: activeContext.md  implementation-plan.md  productContext.md  progress.md  progress.md.backup-before-qa-archive  projectbrief.md  qa-report-task-001.md  systemPatterns.md  tasks.md  tasks.md.backup-20250629-142917  tasks.md.backup-before-help-ui-planning  tasks.md.backup-before-qa-archive  techContext.md
output/: 5eqy_protein_embedding.npz  templates.txt
scripts/: README_ablation_study.md  add_spdx_headers.py  debug_sdf_ligands.py  deploy.sh  generate_embedding_map.py  run_custom_split_benchmark.py  run_pipeline.py  run_polaris_ablation_study.sh  run_streamlit_app.py  run_tests.py  setup_pdbind_data.py
templ_benchmark_results_polaris/: templ_polaris_benchmark_results_20250617_032212.json  templ_polaris_benchmark_results_20250704_141939.json  templ_polaris_summary_table_20250617_032212.csv  templ_polaris_summary_table_20250617_032212.md  templ_polaris_summary_table_20250704_141939.csv  templ_polaris_summary_table_20250704_141939.md
templ_pipeline/: __init__.py
templ_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_simple_timesplit_results/: results_test_20250724_211629.jsonl  results_test_20250724_211653.jsonl  summary_test_20250724_211524.json  summary_test_20250724_211629.json  summary_test_20250724_211653.json
test_summaries/: test_timesplit_benchmark_summary_20250807_165756.csv  test_timesplit_benchmark_summary_20250807_165756.json  test_timesplit_benchmark_summary_20250807_165756.md
tests/: README_REORGANIZATION.md  TEST_REFACTORING_SUMMARY.md  __init__.py  conftest.py  test_all_commands.py  test_benchmark_error_simple.py  test_benchmark_error_tracking.py  test_benchmark_runner.py  test_benchmark_summary.py  test_benchmark_summary_fixed.py  test_benchmark_summary_simple.py  test_chemistry.py  test_cli_progress.py  test_cli_workspace.py  test_core_pipeline.py  test_diagnostics.py  test_directory_manager.py  test_embedding.py  test_fixture_caching.py  test_flaky_detection.py  test_integration.py  test_mcs.py  test_performance.py  test_profiler.py  test_quality_assurance.py  test_scoring.py  test_templates.py  test_timesplit.py  test_timing_analysis.py  test_ui_app.py  test_ui_async.py  test_ui_caching.py  test_ui_components.py  test_utils.py
tools/: .deptry.toml  .templ.config.template  pytest-performance.ini  pytest.ini  templ_pipeline.code-workspace
ui/: README.md  app.py
(+1439 files in other folders)
