[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "templ_pipeline"
version = "0.1.0"
description = "TEMPL (Template-based Protein Ligand) pose prediction pipeline"
authors = [
    {name = "TEMPL Team", email = "author@example.com"},
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "streamlit>=1.10.0",
    "rdkit>=2022.03.1",
    "biopython>=1.79",
    "tqdm>=4.62.0",
    "transformers>=4.10.0",
    "torch>=1.10.0",
    "py3Dmol>=1.8.0",
    "biotite>=0.34.0",
    "stmol>=0.0.9",
    "rich>=12.0.0",
    "colorama>=0.4.4",
    "spyrmsd>=0.8.0",
    "pebble>=4.6.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.3.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
examples = [
    "matplotlib>=3.5.0",
]
scripts = [
    "umap-learn>=0.5.0",
]

[project.scripts]
templ = "templ_pipeline.cli.main:main"

[project.urls]
"Homepage" = "https://github.com/username/templ_pipeline"
"Bug Reports" = "https://github.com/username/templ_pipeline/issues"
"Source" = "https://github.com/username/templ_pipeline"

[tool.setuptools.packages.find]
where = ["."]
include = ["templ_pipeline*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
templ_pipeline = ["data/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "fast: marks tests as fast running",
    "performance: marks tests as performance-related",
    "slow: marks tests as slow running"
]

[tool.deptry]
per_rule_ignores = { DEP003 = ["templ_pipeline"], DEP004 = ["matplotlib", "umap"] } 